_sass/dialog.scss
/*
 * Copyright (c) 2017, Inversoft Inc., All Rights Reserved
 */

@import 'mixins';
@import 'variables';

.prime-dialog {
  background: #fff;
  border-radius: 2px;
  border: 2px solid $dialog-border-radius;
  display: flex;
  flex-direction: column;
  left: calc(50vw - 150px);
  opacity: 0;
  position: fixed;
  top: 150px;
  transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
  width: 300px;

  header {
    h2 {
      color: $dialog-header-color;
      font-size: 16px;
      font-weight: 500;
      margin: 0;
      padding: 10px;

      a {
        float: right;
        font-size: 16px;
        font-weight: bold;
        text-decoration: none;

        i.fa {
          color: $gray-4;
        }

        &:hover, &:visited {
          color: #fff;
        }
      }
    }
  }

  > main {
    max-height: calc(100vh - 200px);
    overflow-y: scroll;
    padding: 10px;

    h3 {
      border-bottom: 1px solid $dialog-section-header-background-color;
      font-size: 14px;
      margin: 10px 0 0 0;
      padding: 12px 15px;
    }

    div.disabled {
      opacity: 0.5;
      pointer-events: none;
    }
  }

  > footer {
    padding: 10px;
  }

  &.open {
    opacity: 1;
  }

  &.wide {
    left: calc(50vw - 300px);
    width: 600px;
  }
}

